--- a/fronend/src/App.css
+++ b/fronend/src/App.css
@@ -60,24 +60,7 @@ h2 {
   color: #9E9E9E;
   font-style: italic;
   font-size: 15px;
-}
-/* .card {
-  background-color: #FFFFFF;
-  margin: 50px auto;
-  max-width: 400px;
-  text-align: center;
-  border-radius: 10px;
-  box-shadow: 10px 10px 30px #BDBDBD;
-}
-.card__image {
-  border-radius: 10px 10px 0 0;
-  overflow: hidden;
-  max-height: 200px;
-}
-.card__copy {
-  padding: 20px;
-} */
-
+} 
 .card {
   border: 1px solid #ddd;
   border-radius: 5px;
@@ -116,4 +99,49 @@ h2 {
 .favorite-button:hover,
 .details-button:hover {
   background-color: #0056b3;
+}
+
+
+.search-container {
+  position: relative;
+}
+
+.search-icon {
+  position: absolute;
+  left: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none; 
+}
+
+input {
+  padding-left: 30px; 
+  width: 300px;
+  height: 30px;
+}
+/* //////////// */
+/* Add this CSS to your styles file or use inline styles */
+
+.github-auth-button {
+  display: inline-flex;
+  align-items: center;
+  padding: 10px 10px;
+  background-color: #432b70; /* GitHub color */
+  color: #ffffff; /* White text color */
+  border: none;
+  border-radius: 4px;
+  text-decoration: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-top: -100px;
+  margin-left: 100px;
+}
+
+.github-auth-button:hover {
+  background-color: #5f24cd; /* Darker GitHub color on hover */
+}
+
+.github-icon {
+  margin-right: 8px;
+  font-size: 1.5em;
 }
