--- a/fronend/src/App.css
+++ b/fronend/src/App.css
@@ -126,8 +126,8 @@ input {
   display: inline-flex;
   align-items: center;
   padding: 10px 10px;
-  background-color: #432b70; /* GitHub color */
-  color: #ffffff; /* White text color */
+  background-color: #432b70; 
+  color: #ffffff;
   border: none;
   border-radius: 4px;
   text-decoration: none;
@@ -138,7 +138,7 @@ input {
 }
 
 .github-auth-button:hover {
-  background-color: #5f24cd; /* Darker GitHub color on hover */
+  background-color: #5f24cd; 
 }
 
 .github-icon {
